# kate

./: README.md
kate/plugins/xmledit/: .katexmledit.desktop.swp  katexmledit.desktop  plugin_katexmledit.cpp  plugin_katexmledit.cpp.autosave  plugin_katexmledit.h  ui.rc  xml_parser_parts.cpp  xml_parser_parts.h
kate/plugins/xmledit/ioan/: plugin_katexmlcheck.cpp
xmledit/: CMakeLists.txt  Messages.sh
xmledit/ioan/: xml_parser_parts.cpp
